# Internet_market

./: .env.example  .flake8  .gitignore  Dockerfile  LICENSE  ProjectM3.md  README.md  docker-compose.yml  first_run.md  mypy.ini  pyproject.toml  pytest.ini
config/: settings.py  urls.py
orders/: admin.py  models.py  urls.py  views.py
orders/migrations/: 0001_initial.py
products/: admin.py  models.py  tests.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_product_image.py
reviews/: admin.py  forms.py  models.py  urls.py  views.py
reviews/migrations/: 0001_initial.py  0002_alter_review_options_alter_review_unique_together.py
scripts/: init.sh  populate_beers.py  products.sh  update_images.py
static/css/: main.css
static/js/: cart.js  main.js
templates/: account.html  base.html  cart.html  checkout.html  contact.html  forgot_password.html  guides-recipes.html  home.html  home.html.bak  login.html  order_created.html  product-caramel-malt.html  product-cascade-hops.html  product-centennial-hops.html  product-citra-hops.html  product-imperial-yeast.html  product-maris-otter-malt.html  product-mosaic-hops.html  product-pilsner-malt.html  product-saaz-hops.html  product-safale-us05-yeast.html  product-unmalted-wheat.html  product-west-coast-ipa-kit.html  product_detail.html  product_detail.html.bak  register.html
templates/admin/: add.html  dashboard.html  products.html
templates/old/: product-caramel-malt.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: init_data.py
users/migrations/: 0001_initial.py
